syntax = "proto2";

package serversdk;

enum HeadType {
  LOGIN_REQUEST = 1;
  LOGIN_RESPONSE = 2;
  LOGOUT_REQUEST = 3;
  LOGOUT_RESPONSE = 4;
  NOTIFICATION = 5;
  HEARTBEAT_REQUEST = 6;
  HEARTBEAT_RESPONSE = 7;
  SEND_TO_SERVER = 8;
  SEND_TO_CLIENT = 9;

  //More package type
}

message LoginRequest {
}

message LoginResponse {
  required int32 code = 1;
  required string msg = 2;
}

message LogoutRequest {
}

message LogoutResponse {
}

message Notification {
  required string msg = 1;
}

message HeartbeatRequest {
}

message HeartbeatResponse {
}

message SendToServer {
  required bytes data = 1;
}

message SendToClient {
  required bytes data = 1;
}

message GamePkg {
  required HeadType type = 1;
  required int32 appId = 2;
  required string uid = 3;
  required int64 timestamp = 4;

  optional LoginRequest loginRequest = 5;
  optional LoginResponse loginResponse = 6;
  optional LogoutRequest logoutRequest = 7;
  optional LogoutResponse logoutResponse = 8;
  optional Notification notification = 9;
  optional HeartbeatRequest heartbeatRequest = 10;
  optional HeartbeatResponse heartbeatResponse = 11;
  optional SendToServer sendToServer = 12;
  optional SendToClient sendToClient = 13;
}